--- a/stylesheets/overlay.css
+++ b/stylesheets/overlay.css
@@ -9,6 +9,7 @@
   height: 100%;
   display: block;
   z-index: 2147483647;
+  background: transparent;
 }
 
 .--anchor-selector-overlay > svg > .background > path {
