--- a/stylesheets/overlay.css
+++ b/stylesheets/overlay.css
@@ -11,6 +11,7 @@
   display: block;
   z-index: 2147483647;
   background: transparent;
+  pointer-events: none;
 }
 
 .--anchor-selector-overlay > svg > .background > path {
